# chromiumos_touch_keyboard

./: 60-touch-keyboard.rules  61-evdev-yogabook.hwdb  BUILD.gn  CMakeLists.txt  LICENSE.md  README.md  README.upstream.md  base_macros.h  csv.h  evdevsource.cc  evdevsource.h  evdevsource_test.cc  fakekeyboard.cc  fakekeyboard.h  faketouchpad.cc  faketouchpad.h  layout-touchpad.csv  layout.csv  logging.cc  logging.h  main.cc  syscallhandler.h  syscallhandler_mock.h  touch-hw.csv  touch-keyboard-handler.service  touch-keyboard-sleep  touch_keyboard.conf  uinput_definitions.h  uinputdevice.cc  uinputdevice.h  uinputdevice_test.cc
.github/workflows/: cmake-single-platform.yml
debian/: changelog  control  copyright  rules  touch-keyboard-udeb.install  touch-keyboard-udeb.postinst  touch-keyboard.lintian-overrides  touch-keyboard.postinst
haptic/: ff_driver.cc  ff_driver.h  haptic_test.cc  touch_ff_manager.cc  touch_ff_manager.h
layouts/: README  YB1-X9x-pc104.csv  YB1-X9x-pc105.csv  layout-YB1-X91-ru.csv
seccomp/amd64/: touch_keyboard_handler.policy
statemachine/: eventkey.cc  eventkey.h  eventkey_test.cc  slot.cc  slot.h  slot_test.cc  statemachine.cc  statemachine.h  statemachine_test.cc
